# native-gb-web

./: .gitignore  AGENTS.md  LICENSE  README.md  ROADMAP.md  TETRIS_PRESENTATION_WEB_HANDOFF.md  package-lock.json  package.json
runtime/sml/: CMakeLists.txt  browser_main.cpp  source-version.sh
runtime/tetris/: CMakeLists.txt  browser_main.cpp  source-version.sh
scripts/: audit-distribution.py  bootstrap-emsdk.sh  build-sml.sh  build-tetris.sh  check.sh  deploy-pages.sh  serve.sh  test-browser.sh  test-sml-browser.sh
site/: _headers  catalog.js  catalog.json  index.html  play.css  storage.js  styles.css
site/play/sml/: index.html  launcher.js  runtime.js
site/play/tetris/: index.html  launcher.js  runtime.js
tests/: browser-smoke.js  check_bundle.py  check_sml_bundle.py  sml-browser-smoke.js  test_site.py
